force-app/main/default/objects/SalesforceDocumentLink__x/SalesforceDocumentLink__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceDocumentLink</externalName>
    <label>Documento Salesforce</label>
    <pluralLabel>Documenti Salesforce</pluralLabel>
</CustomObject>