force-app/main/default/objects/SalesforceDocumentLink__x/fields/LinkedEntityIdAccount__c.field-meta.xml
<CustomField>
    <fullName>LinkedEntityIdAccount__c</fullName>
    <description>LinkedEntityId</description>
    <externalDeveloperName>LinkedEntityId</externalDeveloperName>
    <label>ID entità Cliente Salesfoce</label>
    <length>18</length>
    <referenceTo>SalesforceCustomer__x</referenceTo>
    <relationshipLabel>Documenti Salesforce</relationshipLabel>
    <relationshipName>DocumentiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>