force-app/main/default/objects/SalesforceDocumentLink__x/fields/LinkedEntityIdOrder__c.field-meta.xml
<CustomField>
    <fullName>LinkedEntityIdOrder__c</fullName>
    <externalDeveloperName>LinkedEntityId</externalDeveloperName>
    <label>ID entità Ordine Salesfoce</label>
    <length>18</length>
    <referenceTo>SalesforceOrder__x</referenceTo>
    <relationshipLabel>Documenti Salesforce</relationshipLabel>
    <relationshipName>DocumentiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>