force-app/main/default/objects/SalesforceDocumentLink__x/fields/LinkedEntityIdWrtsActivity__c.field-meta.xml
<CustomField>
    <fullName>LinkedEntityIdWrtsActivity__c</fullName>
    <externalDeveloperName>LinkedEntityId</externalDeveloperName>
    <label>ID entità Attività Salesfoce</label>
    <length>18</length>
    <referenceTo>SalesforceWrtsActivity__x</referenceTo>
    <relationshipLabel>Documenti Salesforce</relationshipLabel>
    <relationshipName>DocumentiSalesforce</relationshipName>
    <type>ExternalLookup</type>
</CustomField>